--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "app.js",
-        "use": "@vercel/node"
-      }
+        { "src": "views/**/*", "use": "@vercel/node" },
+        { "src": "public/**/*", "use": "@vercel/static" },
+        { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "app.js"
       }
     ]
   }
