--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.3.5",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^3.0.0",
